# rust_gl

./: Cargo.toml  README.md
res/shaders/: basic.vs  basic_texture.fs  basic_texture.vs  basic_uniform.fs  simple_triangle.fs
src/: error.rs  gl_bootstrap.rs  main.rs  renderer.rs  shaders.rs  texture.rs
src/samples/: mod.rs  simple_square.rs  simple_squre.rs  simple_triangle.rs  textured_square.rs
